--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -9,9 +9,9 @@
 
  <!-- Required permission to use in-app billing. -->
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
-    <uses-permission android:name="android.permiss.MainActivityTWORK_STATE"/>
+    <uses-permission android:name="android.permiss.NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
     <uses-permission android:name="com.android.vending.BILLING" />
   
     <uses-permission android:name="android.permission.ACCESS_GPS" />
@@ -90,9 +90,9 @@
   
         
         
-                <activity android:name="com.example.appvilleegg"
-                    android:screenOrientation="portrait"
-                     android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+       <activity android:name="com.example.appvilleegg"
+                android:screenOrientation="portrait"
+                android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
         
                   <activity android:name="com.example.appvilleegg.sampleApp.FriendsListActivity"
