--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -37,7 +37,8 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.VIBRATE" />
     
-
+	<!-- Create Shortcut in Home screen -->
+	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 
 
     <application
